# This server architecture was started as a C++ server producing HTML in its own while(true) Socket.accept out.println loop
# In 2015 the server was written in Java which produced the client pages as Strings containing HTML
# In 2016 the JAVA server could read CSV, generate HTML pages and write CSV for eBilanz import
# In 2019 it was ported to heavy J2EE on Apache with the client still being HTML yet generated by JSP
# In 2020 the server was migrated back to plain Java but sent JSON data packets to the client which was made of simple JavaScript pages
# In 2021 the server was ported to nodeJS/express which sends the same (huge) JSON packet to the 14 client pages in JavaScript
# In 2022 the frontend based on React was added and the persistent data now resides in Google Firebase Bucket Storage
#         the server runs NODE JS on Amazon Web Services while the old client uses JavaScript/BE and another client uses React/FE
#
